<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/timer_show"
        android:layout_width="85dp"
        android:layout_height="51dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="200dp"
        android:background="@color/color_timer"
        android:paddingStart="35dp"
        android:paddingTop="15dp"
        android:text="10" />

    <Button
        android:id="@+id/timer_button"
        android:layout_width="234dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:layout_marginStart="89dp"
        android:text="@string/click"
        android:backgroundTint="@color/color_timer"/>

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="89dp"
        android:layout_marginTop="270dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/log_view"
            android:layout_width="100dp"
            android:textColor="@color/color_timer"
            android:layout_height="20dp"
            android:text="@string/login"
            android:visibility="invisible"/>

        <EditText
            android:id="@+id/first_edit"
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:textColor="@color/black"
            android:layout_marginTop="14dp"
            android:visibility="invisible" />

    </LinearLayout>
    <LinearLayout

        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="89dp"
        android:layout_marginTop="320dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/pass_view"
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:textColor="@color/color_timer"
            android:text="@string/password"
            android:visibility="invisible"/>

        <EditText
            android:id="@+id/second_edit"
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:textColor="@color/black"
            android:layout_marginTop="14dp"
            android:visibility="invisible" />

    </LinearLayout>


</FrameLayout>